2007-02-21  Hans-Peter Nilsson  <hp@axis.com>

	* cris/crt0.S: Use jump, not ba, to skip the interrupt table.  Use
	"setf", not "nop", for common_v10_v32 compatibility.
	Move out interrupt table to irqtable.S.  Include here for non-ELF.
	* cris/irqtable.S: Extracted from cris/crt0.S.  Provide per-entry
	weak default stub definitions.
	* cris/crtn.c: Use "setf", not "nop", for common_v10_v32
	compatibility.
	* cris/setup.S [__arch_common_v10_v32]: Return.
	* cris/Makefile.in (BSP_OBJS): Add irqtable.o.

2007-02-15  Nick Clifton  <nickc@redhat.com>

	* sparc/cygmon.ld.src: Link .rodata.* input sections into .text
	output section.
	* sparc/cygmon-sparc64-ld.src: Likewise. 

2007-02-08  Dave Brolley  <brolley@redhat.com>

	* mep: New target directory.
	* README: Add MeP.
	* configure.in: Add support for MeP.
	* configure: Regenerated.
	* mep/configure.in: New file.
	* mep/configure: Ditto.
	* mep/Makefile.in: Ditto.
	* mep/aclocal.m4: Ditto.
	* mep/crt0.S: Ditto.
	* mep/crtn.S: Ditto.
	* mep/sim-crt0.S: Ditto.
	* mep/sim-crtn.S: Ditto.
	* mep/fmax.ld: Ditto.
	* mep/gcov-io.h: Ditto.
	* mep/gmap_default.ld: Ditto.
	* mep/handlers.c: Ditto.
	* mep/h_reset.c: Ditto.
	* mep/isatty.c: Ditto.
	* mep/mep-bb.c: Ditto.
	* mep/mep-gmon.c: Ditto.
	* mep/min.ld: Ditto.
	* mep/read.c: Ditto.
	* mep/sbrk.c: Ditto.
	* mep/sdram-crt0.S: Ditto.
	* mep/sdram-crtn.S: Ditto.
	* mep/simnovec-crt0.S: Ditto.
	* mep/simple.ld: Ditto.
	* mep/simsdran-crt0.S: Ditto.
	* mep/syscalls.S: Ditto.
	* mep/write.c: Ditto.

2007-01-19  Kazunori Asayama <asayama@sm.sony.co.jp>

	* spu/syscalls.c: Replace vector with __vector.

2007-01-09  Ben Elliston  <bje@au.ibm.com>

	* spu/exit.c (_exit): Finish with an infinite loop to eliminate a
	warning about this noreturn function returning.

2007-01-04  Kazu Hirata  <kazu@codesourcery.com>

	Merge from newlib-csl-20060320-branch:
	2006-12-22  Nathan Sidwell  <nathan@codesourcery.com>

	libgloss/
	* m68k/Makefile.in (CF_ISRS): Remove now shared routines.