@@ -1,3 +1,9 @@
+2007-02-21  Patrick Mansfield <patmans@us.ibm.com>
+
+	* libgloss/spu/gettimeofday.c: New file which adds SPU gettimeofday.
+	* libgloss/spu/jsre.h: Remove time, add gettimeofday.
+	* libgloss/spu/Makefile.in: Ditto.
+
 2007-02-21  Hans-Peter Nilsson  <hp@axis.com>
 
 	* cris/crt0.S: Use jump, not ba, to skip the interrupt table.  Use
